# DukBridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: dukbridge.cpp  dukbridge.hpp
tests/: main.cpp
